# tech-demos

./: .gitattributes  .gitignore  README.md
AnimatedHeart/: AnimatedHeart.sln  AnimatedHeart.vcxproj  Resource.aps  Resource.rc  main.cpp
AnimatedHeart/AnimatedHeart/: AnimatedHeart.vcxproj.filters
App/src/: main.cpp
Common/src/: Common.cpp  SvnWrapper.cpp
ConcurrencyLogPipe/: LogClient.cpp  NamedPipeServer.cpp  PerformanceTestClient.cpp  README.md  build.bat  build_cmake.bat
ConsumerApp/src/: main.cpp
CoroutineDemo/include/: CoroutineTask.h
CoroutineDemo/src/: main.cpp
Coroutines/: Generator.cpp  Scheduler.cpp  coroutine_demo.cpp  main.cpp  switch_to_new_thread.cpp  tunable_coro.cpp
Lua/src/: luac.c
SharedMemoryLog/: README.md  SharedMemoryLogClient.cpp  SharedMemoryLogServer.cpp
SqlConnectionPoolProject/: CMakeLists.txt  SqlConnectionPool.cpp  SqlConnectionPool.h  main.cpp
SvnOperation/src/: AppConfig.h  BeastHttp.hpp  ConfigLoader.cpp  ConfigLoader.h  XL2JSON.cpp  XL2JSON.h  main.cpp  stringex.cpp  stringex.h
TaskManagerDemo/: CMakeLists.txt
TaskManagerDemo/src/: TaskManager.h  main.cpp
Win32UIDemo/: CMakeLists.txt
Win32UIDemo/src/: main.cpp
WinHTTPGuiDemo/: MainWindow.cpp  MainWindow.h  WinMain.cpp  main.cpp  ui_config.lua
gamesvr/: jzsc2_gameserver.sdf  jzsc2_gameserver.vcxproj  jzsc2_gameserver.vcxproj.filters
gamesvr/src/: GameSvrProxyConnecter.cpp  GameSvrProxyConnecter.h  GmServerManageConnecter.cpp  GmServerManageConnecter.h  LogSvrConnecter.cpp  (+23 more)
launcher/: launcher.cpp
launcher-client/: BeastHttp.hpp  launcher.cpp
(+100 files in other folders)
